--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,30 @@
 astroid==1.6.5
+autopep8==1.3.5
+certifi==2018.4.16
+chardet==3.0.4
+codegen==1.0
 colorama==0.3.9
+futures==3.1.1
+goslate==1.5.1
+idna==2.7
 isort==4.3.4
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 numpy==1.14.5
 pandas==0.23.3
 pbr==4.1.0
+polib==1.1.0
+pycodestyle==2.4.0
 pylint==1.9.2
 python-dateutil==2.7.3
+python-translate==1.0.15
 pytz==2018.5
+PyYAML==3.13
+requests==2.19.1
 six==1.11.0
 stevedore==1.28.0
+translation==1.0.5
+urllib3==1.23
 virtualenv==16.0.0
 virtualenv-clone==0.3.0
 virtualenvwrapper==4.8.2
